<resources>
    <string name="app_name">firebase basics</string>
    <string name="title_hint">Title</string>
    <string name="price_hint">0.00</string>
    <string name="description_hint">Description</string>
    <string name="save">save</string>
    <string name="hello_world">Hello World</string>
    <string name="currency">KES</string>
    <string name="add_option">Add</string>
    <string name="edit_option">Edit</string>
    <string name="Insert_label">Insert</string>
    <string name="delete_option">Delete</string>
    <string name="view_deals_option">View Deals</string>
    <string name="logout_option">Logout</string>
    <string name="image_deals">image deals</string>
    <string name="question">Can you read this?</string>
    <string name="optionA">Yes</string>
    <string name="optionB">No</string>
    <string name="topic">Topic</string>
</resources>