<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_insert"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/margin_standard"
    tools:context=".activity.ExamActivity">

    <EditText
        android:id="@+id/txtTopic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/padding_standard"
        android:inputType="none"
        android:text="@string/topic"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <EditText
        android:id="@+id/txtQuestion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:inputType="textPersonName"
        android:padding="@dimen/padding_standard"
        android:text="@string/question"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtTopic" />

    <EditText
        android:id="@+id/txtOption_a"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/optionA"
        android:inputType="textPersonName"
        android:layout_margin="@dimen/margin_standard"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtQuestion"
        />

    <EditText
        android:id="@+id/txtOption_b"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/optionB"
        android:inputType="textPersonName"
        android:layout_margin="@dimen/margin_standard"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtOption_a"
        />

    <EditText
        android:id="@+id/txtOption_c"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:layout_margin="@dimen/margin_standard"
        android:text="@string/optionB"


        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtOption_b"
        />
    <EditText
        android:id="@+id/txtOption_d"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:layout_margin="@dimen/margin_standard"
        android:text="@string/optionB"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtOption_c"
        />

</androidx.constraintlayout.widget.ConstraintLayout>