<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_insert"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="15dp"
    tools:context=".activity.QuestionActivity">

    <EditText
        android:id="@+id/insert_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/title_hint"
        android:padding="@dimen/padding_standard"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <EditText
        android:id="@+id/insert_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/price_hint"
        android:inputType="numberDecimal"
        android:padding="@dimen/padding_standard"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/insert_title" />

    <EditText
        android:id="@+id/insert_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/description_hint"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/insert_price"
        android:padding="@dimen/padding_standard"
        />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="194dp"
        android:layout_height="200dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnImage"
        app:srcCompat="@android:drawable/screen_background_dark_transparent" />

    <Button
        android:id="@+id/btnImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/insert_description" />
</androidx.constraintlayout.widget.ConstraintLayout>